# cigen

./: .biomeignore  .clippy.toml  .dockerignore  .gitignore  .prettierignore  .prettierrc  .rustfmt.toml  .woodpecker.yml  CACHING.md  CLAUDE.md  CONFIG_FORMAT.md  Cargo.toml  Dockerfile  PRD.txt  README.md  TEMPLATING.md  Taskfile.yml  WOODPECKER_SETUP.md  biome.jsonc  build.rs  cigen.yml  lefthook.yml  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.json  rust-toolchain.toml  turbo.json
.cigen/: config.yml
.cigen/workflows/: ci.yml  docs.yml  release.yml
.gemini/: GEMINI.md
.github/: actionlint.yaml  wait-for-checks.js
.github/workflows/: ci.yml  docs.yml  release.yml
docker/: README.md  cigen.Dockerfile
docker/ci-runner/: Dockerfile
docker/cigen-bootstrap/: Dockerfile  Dockerfile.local  README.md
docs/: CLAUDE.md  README.md  astro.config.mjs  biome.jsonc  package.json  pnpm-lock.yaml
docs/public/: install.sh
examples/: README.md
examples/circleci_node_simple_inline/: cigen.yml  package-lock.json
examples/circleci_rails/: cigen.yml  config.yml  etc-hosts-dev.txt
examples/minimal/: README.md  cigen.yml
examples/monorepo/: README.md  cigen.yml
examples/multi-provider/: README.md  cigen.yml
examples/packages_test_inline/: cigen.yml
examples/rails-app/: README.md  cigen.yml
examples/woodpecker/: README.md
internal_docs/: CIGEN_YML_SCHEMA.md  CIRCLECI.md  JOB_SKIPPING.md  NOTES.md  OR_DEPENDENCIES.md  PHILOSOPHY.md  PLUGIN_ARCHITECTURE.md  PRD.txt  REQUIREMENTS.md  SELF_HOSTING_ON_GITHUB_ACTIONS.md  STDIO_TRANSPORT_DESIGN.md  TODO.md
notes/: CACHING.md  CIGEN_YML_SCHEMA.md  CIRCLECI.md  CONFIG_FORMAT.md  MIGRATION_STATUS.md  NOTES.md  PLUGIN_ARCHITECTURE.md  REQUIREMENTS.md  SELF_HOSTING_ON_GITHUB_ACTIONS.md  dynamic_setup_redesign.md
plugins/provider-circleci/: Cargo.toml
plugins/provider-circleci/src/: main.rs  shallow_checkout.yml
plugins/provider-github/: Cargo.toml
plugins/provider-woodpecker/: Cargo.toml  README.md
plugins/provider-woodpecker/src/: main.rs
proto/: plugin.proto
schemas/v1/: command-schema.json  config-base-schema.json  config-schema.json  definitions.json  job-schema.json  workflow-config-schema.json
scripts/: build-ci-runner.sh  build-cigen-bootstrap-local.sh  compare_ci_configs.py  compare_ci_configs.rb  create-release-tag.sh  install.sh  run_integration_tests.sh  setup.sh  validate_ci_config.rb
scripts/ci_config_comparison/: README.md  compare.py
src/: error_utils.rs  lib.rs  loader.rs  main.rs  validation.rs
src/commands/: generate.rs  graph.rs  hash.rs  init.rs  inspect.rs  list.rs  mod.rs  render.rs  validate.rs
src/defaults/: cache_definitions.yaml  mod.rs
src/graph/: dependency_graph.rs  mod.rs
src/loader/: cache_dependencies.rs  command_loader.rs  config_loader.rs  context.rs  file_scanner.rs  job_loader.rs  mod.rs  span_tracker.rs
src/models/: command.rs  config.rs  display.rs  job.rs  mod.rs  package_managers.rs  tests.rs  tests_packages.rs
src/orchestrator/: convert.rs  dag.rs  mod.rs  workflow.rs
src/plugin/: discovery.rs  framing.rs  manager.rs  mod.rs  protocol.rs  stdio_transport.rs
src/providers/: mod.rs
src/schema/: command.rs  config.rs  job.rs  mod.rs  step.rs  workflow.rs
src/templating/: engine.rs  error.rs  functions.rs  mod.rs  variables.rs
src/validation/: command.rs  config.rs  error_reporter.rs  job.rs  merger.rs  mod.rs  post_template.rs  schemas.rs  steps.rs  tests.rs  validator.rs
tests/: basic_test.rs  circleci_job_status.rs  cli.rs  end_to_end_workflow.rs  integration_split_vs_inline.rs  plugin_integration.rs  schema_parsing.rs  snapshot_circleci_rails.rs  snapshot_docker_build.rs  snapshot_node_simple_split.rs  structure_checks.rs  workflow_condition_validation.rs
tests/cmd/: generate_inline.trycmd  help.trycmd  invalid_config.trycmd
tests/snapshots/: snapshot_circleci_rails__circleci_rails_config.snap  snapshot_node_simple_split__node_simple_split_config.snap
(+104 files in other folders)
