[package]
name = "cigen"
version = "0.1.0"
edition = "2024"
authors = ["Nathan Broadbent / DocSpring Inc"]
description = "A CLI tool that generates CI pipeline configurations from templates"
license = "MIT"
repository = "https://github.com/DocSpring/cigen"
readme = "README.md"
keywords = ["cli", "ci", "nx", "circleci", "devops"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive", "cargo", "env"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0.17"
insta = "1.43.1"
predicates = "3.1.3"
tempfile = "3.20.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0
