[package]
name = "cigen"
version = "0.1.0"
edition = "2024"
authors = ["Nathan Broadbent / DocSpring Inc"]
description = "A CLI tool that generates CI pipeline configurations from templates"
license = "MIT"
repository = "https://github.com/DocSpring/cigen"
readme = "README.md"
keywords = ["cli", "ci", "nx", "circleci", "devops"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
clap = { version = "4.5.41", features = ["derive", "cargo", "env"] }
colored = "3.0.0"
jsonschema = { version = "0.30.0", default-features = false, features = ["resolve-file"] }
miette = { version = "7.6.0", features = ["fancy"] }
minijinja = { version = "2.11.0", features = ["debug"] }
once_cell = "1.21.3"
petgraph = "0.8.2"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
which = "8.0.0"
yaml-spanned = "0.0.2"
globwalk = "0.9.1"
walkdir = "2.5.0"
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
insta = "1.43.1"
predicates = "3.1.3"
snapbox = "0.6.21"
tempfile = "3.20.0"
trycmd = "0.15.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"
